fixes on children list

--- a/demo.html
+++ b/demo.html
@@ -93,6 +93,7 @@
                     </div>
                 </div>
                 <div data-layout="w:200,sz:'box',dir:'v'">
+                    <!--<button data-layout="h:20">add</button>-->
                     <div data-layout="h:100,sz:'closable'" style="border:1px solid lightgrey;margin:2px;">
                         <div>close me</div>
                     </div>
