--- a/demo.html
+++ b/demo.html
@@ -42,6 +42,81 @@
                         <div style="border:1px solid black;padding:5px;margin:5px;">ciao</div>
                         <div style="border:1px solid black;padding:5px;margin:5px;">mondo</div>
                     </div>
+					<div data-layout="w:300,title:'tree', sz:'tree'">
+						<ul class="tree">
+							<li>Animals
+								<ul>
+									<li>Birds</li>
+									<li>Mammals
+										<ul>
+											<li>Elephant
+												<ul>
+													<li>List item 1</li>
+													<li>List item 2</li>
+													<li>List item 3
+														<ul>
+															<li>List item 3.1</li>
+															<li>List item 3.2</li>
+															<li>List item 3.3
+																<ul>
+																	<li>List item 3.3.1</li>
+																</ul>
+															</li>
+															<li>List item 3.4</li>
+														</ul>
+													</li>
+													<li>List item 4</li>
+													<li>List item 6
+														<ul>
+															<li>List item 6.1</li>
+															<li>List item 6.2
+																<ul>
+																	<li>List item 6.2.1</li>
+																	<li>List item 6.2.2</li>
+																</ul>
+															</li>
+															<li>List item 6.3</li>
+															<li>List item 6.4</li>
+															<li>List item 6.5
+																<ul>
+																	<li>List item 6.5.1</li>
+																	<li>List item 6.5.2
+																		<ul>
+																			<li>List item 6.5.2.1</li>
+																			<li>List item 6.5.2.2</li>
+																		</ul>
+																	</li>
+																	<li>List item 6.5.3</li>
+																	<li>List item 6.5.4</li>
+																</ul>
+															</li>
+														</ul>
+													</li>
+													<li>List item 7</li>
+													<li>List item 8</li>
+													<li>List item 9</li>
+													<li>List item 10</li>
+												</ul>
+											</li>
+											<li>Mouse</li>
+										</ul>
+									</li>
+									<li>Reptiles</li>
+								</ul>
+							</li>
+							<li>Plants
+								<ul>
+									<li>Flowers
+										<ul>
+											<li>Rose</li>
+											<li>Tulip</li>
+										</ul>
+									</li>
+									<li>Trees</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
                 </div>
                 <div data-layout="p:1,sz:'split',dir:'v'">
                     <div data-layout="sz:'split',dir:'h',splitpos:150">
